--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "dependencies": {
     "@jiaminghi/data-view": "^2.10.0",
     "@riophae/vue-treeselect": "0.4.0",
-    "axios": "0.24.0",
+    "axios": "^0.24.0",
+    "bpmn-js": "^8.8.3",
     "clipboard": "2.0.8",
     "core-js": "3.19.1",
     "echarts": "4.9.0",
